--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/platform-server": "^9.0.0",
     "@angular/router": "^9.0.0",
+    "bootstrap": "^4.4.1",
     "ngx-mat-select-search": "^2.1.2",
     "rxjs": "~6.4.0",
     "subsink": "^1.0.1",
